[frontend] fixed css bugs on firefox

--- a/web/vueapp/src/assets/style/_nav.scss
+++ b/web/vueapp/src/assets/style/_nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   &.no-nav-margin {
     margin-bottom: 0;
   }
