--- a/web/vueapp/src/assets/style/_overrides.scss
+++ b/web/vueapp/src/assets/style/_overrides.scss
@@ -90,7 +90,7 @@ h6 {
 }
 
 .el-footer {
-  flex-grow: 1;
+  height: auto !important;
   max-height: fit-content;
 }
 
